* Version 3.1.0 (unreleased)
 ** Added U2F high-level API.

* Version 3.0.1 (released 2015-01-14)
 ** Fix JSONDict not pickling.
 ** Set 0 unused bits in attestation certificate signatures with known unused
    bits.

* Version 3.0.0 (released 2014-10-09)
 ** Complete API rewrite to simplify library significantly.

* Version 2.0.0 (released 2014-09-26)
 ** Updated to the latest U2F_V2 standard.
 ** Expose more low level U2F primitives.
 ** Removed old draft versions.

* Version 1.0.0 (released 2014-02-18)
 ** First public release!
 ** Added support for U2F V2.
 ** Added u2f_server.py example, for a fully stand-alone example.

* Version 0.0.2 (unreleased)
 ** Allow example server to be used for multiple origins.

* Version 0.0.1 (released 2013-08-22)
 ** Initial internal release!