@@ -37,9 +37,9 @@ setup(
     maintainer='Yubico Open Source Maintainers',
     maintainer_email='ossmaint@yubico.com',
     url='https://github.com/Yubico/python-u2flib-server',
-    packages=['u2flib_server'],
+    packages=['u2flib_server', 'u2flib_server.attestation'],
     setup_requires=['nose>=1.0'],
-    install_requires=['M2Crypto'],
+    install_requires=['M2Crypto', 'pyasn1', 'pyasn1-modules'],
     test_suite='nose.collector',
     tests_require=[''],
     cmdclass={'release': release},
