@@ -1,0 +1,79 @@
+#    Copyright (C) 2014  Yubico AB
+#
+#    This program is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+#    You should have received a copy of the GNU General Public License
+#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+__all__ = ['MetadataResolver', 'create_resolver']
+
+from M2Crypto import X509
+from u2flib_server.jsapi import MetadataObject
+from u2flib_server.attestation.data import YUBICO
+import os
+import json
+
+
+class MetadataResolver(object):
+
+    def __init__(self):
+        self._certs = {}  # Subject -> Cert
+        self._metadata = {}  # Cert -> Metadata
+
+    def add_metadata(self, metadata):
+        metadata = MetadataObject.wrap(metadata)
+
+        for cert_pem in metadata.trustedCertificates:
+            cert_der = ''.join(cert_pem.splitlines()[1:-1]).decode('base64')
+            cert = X509.load_cert_der_string(cert_der)
+            subject = cert.get_subject().as_text()
+            if subject not in self._certs:
+                self._certs[subject] = []
+            self._certs[subject].append(cert)
+            self._metadata[cert] = metadata
+
+    def resolve(self, cert):
+        for issuer in self._certs.get(cert.get_issuer().as_text(), []):
+            if cert.verify(issuer.get_pubkey()) == 1:
+                return self._metadata[issuer]
+        return None
+
+
+def _load_from_file(fname):
+    with open(fname, 'r') as f:
+        return json.load(f)
+
+
+def _load_from_dir(dname):
+    return map(_load_from_file, [d for d in os.listdir(dname)
+                                 if d.endswith('.json')])
+
+
+def _add_data(resolver, data):
+    if isinstance(data, list):
+        for d in data:
+            _add_data(resolver, d)
+        return
+    elif isinstance(data, basestring):
+        if os.path.isdir(data):
+            data = _load_from_dir(data)
+        elif os.path.isfile(data):
+            data = _load_from_file(data)
+    if data is not None:
+        resolver.add_metadata(data)
+
+
+def create_resolver(data=None):
+    resolver = MetadataResolver()
+    if data is None:
+        data = YUBICO
+    _add_data(resolver, data)
+    return resolver
